2006-07-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

    * lib/uuid.c: Remove.

2006-07-19  Elias Naur  <elias_naur@users.sourceforge.net>

	* include/winuser.h (WM_INPUT): Add missing Raw	Input
	notification define.
	(RID_DEVICE_INFO_MOUSE, RID_DEVICE_INFO_KEYBOARD,
	RID_DEVICE_INFO_HID, RID_DEVICE_INFO): Define Raw Input structs

2006-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1525021]
	* iptypes.h (IP_ADAPTER_ANYCAST_ADDRESS): Fix NONAMELESSUNION warnings.
	(IP_ADAPTER_MULTICAST_ADDRESS): Likewise.	
	(IP_ADAPTER_UNICAST_ADDRESS): Likewise.
	(IP_ADAPTER_DNS_SERVER_ADDRESS): Likewise.
	(IP_ADAPTER_ADAPTER_PREFIX): Likewise.
	(IP_ADAPTER_ADDRESSES): Likewise.

2006-06-13  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/uuid.c (CLSID_FileProtocol, CLSID_FtpProtocol, CLSID_GopherProtocol,
	CLSID_HttpProtocol, CLSID_HttpSProtocol, CLSID_MkProtocol,
	CLSID_PSUrlMonProxy, CLSID_StdURLMoniker): Remove.  Moved to
	extras-uuid.c.
	* lib/extras-uuid.c (CLSID_FileProtocol, CLSID_FtpProtocol, CLSID_GopherProtocol,
	CLSID_HttpProtocol, CLSID_HttpSProtocol, CLSID_MkProtocol,
	CLSID_PSUrlMonProxy, CLSID_StdURLMoniker): Added.
	* lib/hlguids-uuid.c: State source of CLSIDs.

2006-06-13  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Added extras-uuid as an object and source.
	* lib/uuid.c (IID_IClientSiteHandler, IID_IContinue, IID_IHttpNegotiate,
	IID_IPersistMoniker, IID_IServerHandler, IID_ITargetEmbedding,
	IID_ITargetFrame, IID_ITypeComp, IID_IUrlHistoryStg, IID_IWinInetHttpInfo,
	IID_IWinInetInfo, IID_IEnumSTATPROPSETSTG, IID_IEnumSTATPROPSTG,
	IID_IEnumSTATURL): Remove.  Moved to extras-uuid.c.
	* lib/extras-uuid.c: New file.
	Thank you to Julien Lecomte (julienlecomte at users dot sourceforge dot
	net).

2006-06-12  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1424461]
	*include/imagehlp.h: Comment out IN, OUT and OPTIONAL,
	throughout.